# STS2Agent

./: .env.example  .gitignore  README.md  data_url.txt  pyproject.toml  test_api.py
.cursor/: slay_the_spire_2_mod开发计划_af1c6316.plan.md
.cursor/skills/consult-design-docs/: SKILL.md
.github/workflows/: daily-scrape.yml
dict/: README.md  hook.md
dict/model/: card.md  combat.md  core.md  creature.md  encounter.md  enum.md  event.md  flow.md  gameaction.md  modding.md  multiplayer.md  orb.md  potion.md  power.md  relic.md  reward.md  run.md  settings.md
dict/plan/: plan_card_hover_tooltip.md  plan_card_stats.md
dict/service/: tech.md
mod/: GameLoopNode.cs  README.md  STS2Agent.cs  STS2Agent.csproj  STS2Agent.json  deploy.ps1  openapi.json
mod/Models/: CardRewardInfo.cs  CardStats.cs  CombatState.cs  EnemyState.cs  GameState.cs  PlayerState.cs
mod/Services/: CardHoverService.cs  CardRewardService.cs  CardStatsService.cs  GameStateService.cs  Logger.cs
mod/UI/: CardTooltipNode.cs
mod/scripts/: CopyGameDlls.ps1
src/: __init__.py  main.py
src/Data/: __init__.py  cli.py  scraper.py  uploader.py
test/: cards_data.json  test_cards_scraper.py
ui_designer/: Logger.cs  Logger.cs.uid  RewardCardInfo.cs  RewardCardInfo.cs.uid  STS2Agent.Designer.csproj  icon.svg.import  project.godot
ui_designer/scenes/: CardTooltip.tscn  main.tscn
ui_designer/scripts/: CardTooltipDesigner.cs  CardTooltipDesigner.cs.uid  Main.cs  Main.cs.uid
